--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "paper",
-  "version": "0.12.17",
+  "name": "@rvk86/paper",
+  "version": "0.12.18",
   "description": "The Swiss Army Knife of Vector Graphics Scripting",
   "license": "MIT",
   "homepage": "http://paperjs.org",
